--- a/style.css
+++ b/style.css
@@ -7,4 +7,24 @@
   margin-top: 20px;
   overflow: hidden;
 }
+
+#container .line {
+  width: 4%;
+  height: 150px;
+  margin-left: 48%;
+  position: absolute;
+  background-color: #ffffff;
+}
+
+#container #line_1 {
+  top: -150px;
+}
+
+#container #line-2 {
+  top: 150px;
+}
+
+#container #line_3 {
+  top: 450px;
+}
 /*# sourceMappingURL=style.css.map */
