--- a/style.css
+++ b/style.css
@@ -27,4 +27,19 @@
 #container #line_3 {
   top: 450px;
 }
+
+#container .car {
+  width: 40px;
+  height: 60px;
+  border-radius: 5px;
+  position: absolute;
+  -webkit-box-shadow: 0px 1px 8px 0 black;
+          box-shadow: 0px 1px 8px 0 black;
+}
+
+#container #car {
+  bottom: 8%;
+  left: 60%;
+  background-color: #ffdf5a;
+}
 /*# sourceMappingURL=style.css.map */
