--- a/style.css
+++ b/style.css
@@ -134,4 +134,25 @@
   left: 40%;
   background-color: #26c5ff;
 }
+
+#container #restart_div {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: #292929;
+  color: #ffffff;
+  font-family: sans-serif;
+  font-size: 40px;
+  text-align: center;
+  display: none;
+}
+
+#container #restart_div #restart {
+  border: none;
+  padding: 25px;
+  color: white;
+  background-color: #8a64ff;
+  font-size: 30px;
+  margin-top: 30%;
+}
 /*# sourceMappingURL=style.css.map */
