--- a/style.scss
+++ b/style.scss
@@ -116,5 +116,23 @@
         left: 40%;
         background-color: #26c5ff;
     }
-
+    #restart_div {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background-color: #292929;
+        color: #ffffff;
+        font-family: sans-serif;
+        font-size: 40px;
+        text-align: center;
+        display: none;
+        #restart {
+            border: none;
+            padding: 25px;
+            color: white;
+            background-color: #8a64ff;
+            font-size: 30px;
+            margin-top: 30%;
+        }
+    }
 }
