Score styling added

--- a/style.scss
+++ b/style.scss
@@ -1,138 +1,153 @@
-#container {
-    width: 25%;
-    height: 90vh;
-    background-color: #292929;
-    position: relative;
-    left: 35%;
-    margin-top: 20px;
-    overflow: hidden;
-    .line {
-        width: 4%;
-        height: 150px;
-        margin-left: 48%;
+body {
+    #score_div{
         position: absolute;
-        background-color: #ffffff;
+        margin-top: 20%;
+        margin-left: 10%;
+        font-size: 35px;
+        background-color: white;
+        color: #454545;
+        padding: 10px;
+        box-shadow: 4px 4px 0px 1px #808080;
     }
-    #line_1 {
-        top: -150px;
-    }
-    #line-2 {
-        top: 150px;
-    }
-    #line_3 {
-        top: 450px;
-    }
-    .car {
-        width: 40px;
-        height: 60px;
-        border-radius: 5px;
-        position: absolute;
-        box-shadow: 0px 1px 8px 0 black;
-        .f_glass {
-            width: 60%;
-            height: 20%;
-            margin-left: 20%;
-            top: 15%;
-            border-radius: 0 0 5px 5px;
-            background-color: #484848;
-            position: absolute;
-        }
-        .b_glass {
-            width: 60%;
-            height: 20%;
-            margin-left: 20%;
-            position: absolute;
-            bottom: 15%;
-            border-radius: 5px 5px 0 0;
-            background-color: #484848;
-        }
-        .f_light_l {
-            width: 20%;
-            height: 10%;
-            margin-left: 10%;
-            position: absolute;
-            top: -6%;
-            border-radius: 5px 5px 0px 0px;
-            background-color: #efefef;
-        }
-        .f_light_r {
-            width: 20%;
-            height: 10%;
-            margin-left: 70%;
-            position: absolute;
-            top: -6%;
-            border-radius: 5px 5px 0px 0px;
-            background-color: #efefef;
-        }
-        .f_tyre_l {
-            width: 10%;
-            height: 20%;
-            background-color: grey;
-            position: absolute;
-            top: 20%;
-            left: -10%;
-            border-radius: 5px 0px 0px 5px;
-        }
-        .f_tyre_r {
-            width: 10%;
-            height: 20%;
-            background-color: grey;
-            position: absolute;
-            top: 20%;
-            left: 100%;
-            border-radius: 0px 5px 5px 0px;
-        }
-        .b_tyre_l {
-            width: 10%;
-            height: 20%;
-            background-color: grey;
-            position: absolute;
-            top: 70%;
-            left: -10%;
-            border-radius: 5px 0px 0px 5px;
-        }
-        .b_tyre_r {
-            width: 10%;
-            height: 20%;
-            background-color: grey;
-            position: absolute;
-            top: 70%;
-            left: 100%;
-            border-radius: 0px 5px 5px 0px;
-        }
-    }
-    #car {
-        bottom: 8%;
-        left: 60%;
-        background-color: #ffdf5a;
-    }
-    #car_1 {
-        top: -100px;
-        left: 60%;
-        background-color: #26c5ff;
-    }
-    #car_2 {
-        top: -200px;
-        left: 40%;
-        background-color: #26c5ff;
-    }
-    #restart_div {
-        width: 100%;
-        height: 100%;
-        position: absolute;
+    #container {
+        width: 25%;
+        height: 90vh;
         background-color: #292929;
-        color: #ffffff;
-        font-family: sans-serif;
-        font-size: 40px;
-        text-align: center;
-        display: none;
-        #restart {
-            border: none;
-            padding: 25px;
-            color: white;
-            background-color: #8a64ff;
-            font-size: 30px;
-            margin-top: 30%;
+        position: relative;
+        left: 35%;
+        margin-top: 20px;
+        overflow: hidden;
+        .line {
+            width: 4%;
+            height: 150px;
+            margin-left: 48%;
+            position: absolute;
+            background-color: #ffffff;
+        }
+        #line_1 {
+            top: -150px;
+        }
+        #line-2 {
+            top: 150px;
+        }
+        #line_3 {
+            top: 450px;
+        }
+        .car {
+            width: 40px;
+            height: 60px;
+            border-radius: 5px;
+            position: absolute;
+            box-shadow: 0px 1px 8px 0 black;
+            .f_glass {
+                width: 60%;
+                height: 20%;
+                margin-left: 20%;
+                top: 15%;
+                border-radius: 0 0 5px 5px;
+                background-color: #484848;
+                position: absolute;
+            }
+            .b_glass {
+                width: 60%;
+                height: 20%;
+                margin-left: 20%;
+                position: absolute;
+                bottom: 15%;
+                border-radius: 5px 5px 0 0;
+                background-color: #484848;
+            }
+            .f_light_l {
+                width: 20%;
+                height: 10%;
+                margin-left: 10%;
+                position: absolute;
+                top: -6%;
+                border-radius: 5px 5px 0px 0px;
+                background-color: #efefef;
+            }
+            .f_light_r {
+                width: 20%;
+                height: 10%;
+                margin-left: 70%;
+                position: absolute;
+                top: -6%;
+                border-radius: 5px 5px 0px 0px;
+                background-color: #efefef;
+            }
+            .f_tyre_l {
+                width: 10%;
+                height: 20%;
+                background-color: grey;
+                position: absolute;
+                top: 20%;
+                left: -10%;
+                border-radius: 5px 0px 0px 5px;
+            }
+            .f_tyre_r {
+                width: 10%;
+                height: 20%;
+                background-color: grey;
+                position: absolute;
+                top: 20%;
+                left: 100%;
+                border-radius: 0px 5px 5px 0px;
+            }
+            .b_tyre_l {
+                width: 10%;
+                height: 20%;
+                background-color: grey;
+                position: absolute;
+                top: 70%;
+                left: -10%;
+                border-radius: 5px 0px 0px 5px;
+            }
+            .b_tyre_r {
+                width: 10%;
+                height: 20%;
+                background-color: grey;
+                position: absolute;
+                top: 70%;
+                left: 100%;
+                border-radius: 0px 5px 5px 0px;
+            }
+        }
+        #car {
+            bottom: 8%;
+            left: 60%;
+            background-color: #ffdf5a;
+        }
+        #car_1 {
+            top: -100px;
+            left: 60%;
+            background-color: #26c5ff;
+        }
+        #car_2 {
+            top: -200px;
+            left: 40%;
+            background-color: #26c5ff;
+        }
+        #restart_div {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            background-color: #292929;
+            color: #ffffff;
+            font-family: sans-serif;
+            font-size: 40px;
+            text-align: center;
+            display: none;
+            #restart {
+                border: none;
+                padding: 25px;
+                color: white;
+                background-color: #8a64ff;
+                font-size: 30px;
+                margin-top: 30%;
+                .small_text {
+                    font-size: 15px;
+                }
+            }
         }
     }
 }
