--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
-#container {
+body #score_div {
+  position: absolute;
+  margin-top: 20%;
+  margin-left: 10%;
+  font-size: 35px;
+  background-color: white;
+  color: #454545;
+  padding: 10px;
+  -webkit-box-shadow: 4px 4px 0px 1px #808080;
+          box-shadow: 4px 4px 0px 1px #808080;
+}
+
+body #container {
   width: 25%;
   height: 90vh;
   background-color: #292929;
@@ -8,7 +20,7 @@
   overflow: hidden;
 }
 
-#container .line {
+body #container .line {
   width: 4%;
   height: 150px;
   margin-left: 48%;
@@ -16,19 +28,19 @@
   background-color: #ffffff;
 }
 
-#container #line_1 {
+body #container #line_1 {
   top: -150px;
 }
 
-#container #line-2 {
+body #container #line-2 {
   top: 150px;
 }
 
-#container #line_3 {
+body #container #line_3 {
   top: 450px;
 }
 
-#container .car {
+body #container .car {
   width: 40px;
   height: 60px;
   border-radius: 5px;
@@ -37,7 +49,7 @@
           box-shadow: 0px 1px 8px 0 black;
 }
 
-#container .car .f_glass {
+body #container .car .f_glass {
   width: 60%;
   height: 20%;
   margin-left: 20%;
@@ -47,7 +59,7 @@
   position: absolute;
 }
 
-#container .car .b_glass {
+body #container .car .b_glass {
   width: 60%;
   height: 20%;
   margin-left: 20%;
@@ -57,7 +69,7 @@
   background-color: #484848;
 }
 
-#container .car .f_light_l {
+body #container .car .f_light_l {
   width: 20%;
   height: 10%;
   margin-left: 10%;
@@ -67,7 +79,7 @@
   background-color: #efefef;
 }
 
-#container .car .f_light_r {
+body #container .car .f_light_r {
   width: 20%;
   height: 10%;
   margin-left: 70%;
@@ -77,7 +89,7 @@
   background-color: #efefef;
 }
 
-#container .car .f_tyre_l {
+body #container .car .f_tyre_l {
   width: 10%;
   height: 20%;
   background-color: grey;
@@ -87,7 +99,7 @@
   border-radius: 5px 0px 0px 5px;
 }
 
-#container .car .f_tyre_r {
+body #container .car .f_tyre_r {
   width: 10%;
   height: 20%;
   background-color: grey;
@@ -97,7 +109,7 @@
   border-radius: 0px 5px 5px 0px;
 }
 
-#container .car .b_tyre_l {
+body #container .car .b_tyre_l {
   width: 10%;
   height: 20%;
   background-color: grey;
@@ -107,7 +119,7 @@
   border-radius: 5px 0px 0px 5px;
 }
 
-#container .car .b_tyre_r {
+body #container .car .b_tyre_r {
   width: 10%;
   height: 20%;
   background-color: grey;
@@ -117,25 +129,25 @@
   border-radius: 0px 5px 5px 0px;
 }
 
-#container #car {
+body #container #car {
   bottom: 8%;
   left: 60%;
   background-color: #ffdf5a;
 }
 
-#container #car_1 {
+body #container #car_1 {
   top: -100px;
   left: 60%;
   background-color: #26c5ff;
 }
 
-#container #car_2 {
+body #container #car_2 {
   top: -200px;
   left: 40%;
   background-color: #26c5ff;
 }
 
-#container #restart_div {
+body #container #restart_div {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -147,12 +159,16 @@
   display: none;
 }
 
-#container #restart_div #restart {
+body #container #restart_div #restart {
   border: none;
   padding: 25px;
   color: white;
   background-color: #8a64ff;
   font-size: 30px;
   margin-top: 30%;
+}
+
+body #container #restart_div #restart .small_text {
+  font-size: 15px;
 }
 /*# sourceMappingURL=style.css.map */
