--- a/style.css
+++ b/style.css
@@ -151,6 +151,12 @@ body #container #car_2 {
   background-color: #26c5ff;
 }
 
+body #container #car_3 {
+  top: -350px;
+  left: 50%;
+  background-color: #26c5ff;
+}
+
 body #container #restart_div {
   width: 100%;
   height: 100%;
