--- a/style.scss
+++ b/style.scss
@@ -130,6 +130,11 @@ body {
             left: 40%;
             background-color: #26c5ff;
         }
+        #car_3{
+            top: -350px;
+            left: 50%;
+            background-color: #26c5ff;
+        }
         #restart_div {
             width: 100%;
             height: 100%;
