--- a/style.scss
+++ b/style.scss
@@ -130,10 +130,10 @@ body {
             left: 40%;
             background-color: #26c5ff;
         }
-        #car_3{
+        #car_3 {
             top: -350px;
             left: 50%;
-            background-color: #26c5ff;
+            background-color: #f826ff;
         }
         #restart_div {
             width: 100%;
