--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  background-color: #45d678;
+  font-family: sans-serif;
+}
+
 body #help {
   text-align: center;
 }
@@ -149,6 +157,12 @@ body #container #car_2 {
   top: -200px;
   left: 40%;
   background-color: #26c5ff;
+}
+
+body #container #car_3 {
+  top: -350px;
+  left: 50%;
+  background-color: #f826ff;
 }
 
 body #container #restart_div {
